--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Silvia",
+	"name": "sourcechart",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -27,8 +27,6 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"flowbite": "^1.6.4",
-		"flowbite-svelte": "^0.34.1",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
@@ -53,6 +51,5 @@
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.22.0",
 		"@vercel/analytics": "^1.0.1",
-		"cssnano": "^6.0.1"
 	}
 }
