--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "sourcechart",
 	"version": "0.0.1",
+	"license": "sourcechart only",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -50,6 +51,6 @@
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.22.0",
-		"@vercel/analytics": "^1.0.1",
+		"@vercel/analytics": "^1.0.1"
 	}
 }
