--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"autoprefixer": "^10.4.14",
 		"echarts": "^5.4.1",
 		"eslint": "^8.28.0",
+		"flowbite": "^1.6.4",
+		"flowbite-svelte": "^0.34.1",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.24",
