--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "sourcechart",
 	"version": "0.0.1",
-	"license": "sourcechart only",
+	"license": "internal",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -26,10 +26,10 @@
 		"autoprefixer": "^10.4.14",
 		"echarts": "^5.4.1",
 		"eslint": "^8.28.0",
-		"flowbite": "^1.6.4",
-		"flowbite-svelte": "^0.34.1",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"flowbite": "^1.6.4",
+		"flowbite-svelte": "^0.34.1",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
@@ -40,7 +40,6 @@
 		"svelte-echarts": "^0.0.5",
 		"svelte-moveable": "^0.37.0",
 		"svelte-preprocess": "^4.10.7",
-		"svelte-tags-input": "^5.0.0",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
