--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"baseUrl": ".",
+		"typeRoots": ["./types"]
 	},
+	"include": ["src/types/**/*.ts"]
 
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
