uipdating data management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-		"rootDir": "./src",
-		"baseUrl": ".",
-		"typeRoots": ["./types"]
-	},
-	"include": ["src/types/**/*.ts"]
+		"strict": true
+	}
 
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
