--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.22.0",
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"canvas": "^2.11.2",
+		"konva": "^9.2.0",
+		"svelte-konva": "^0.3.0"
 	}
 }
