--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
+		"ignoreDeprecations": "5.0",
+		"verbatimModuleSyntax": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true
