--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
 		"scenejs": "1.1.7",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"svelte-echarts": "^0.0.5",
-		"svelte-moveable": "^0.37.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
@@ -52,9 +50,6 @@
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.22.0",
-		"@vercel/analytics": "^1.0.1",
-		"canvas": "^2.11.2",
-		"konva": "^9.2.0",
-		"svelte-konva": "^0.3.0"
+		"@vercel/analytics": "^1.0.1"
 	}
 }
