--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,19 +6,12 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
+		"ignoreDeprecations": "5.0",
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-	},
+		"strict": true
+	}
 
-	"paths": {
-		"$lib": [
-			"src/lib"
-		],
-		"$lib/*": [
-			"src/lib/*"
-		]
-	  },
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
