--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "Silvia",
+	"name": "sourcechart",
 	"version": "0.0.1",
+	"license": "internal",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -22,24 +23,21 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.7",
+		"autoprefixer": "^10.4.14",
 		"echarts": "^5.4.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"flowbite": "^1.6.4",
 		"flowbite-svelte": "^0.34.1",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"scenejs": "1.1.7",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"svelte-echarts": "^0.0.5",
-		"svelte-moveable": "^0.37.0",
 		"svelte-preprocess": "^4.10.7",
-		"svelte-tags-input": "^5.0.0",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
@@ -48,11 +46,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1",
-		"@supabase/auth-helpers-sveltekit": "^0.10.0",
-		"@supabase/auth-ui-shared": "^0.1.6",
-		"@supabase/auth-ui-svelte": "^0.2.2",
-		"@supabase/supabase-js": "^2.22.0",
-		"cssnano": "^6.0.1"
+		"@vercel/analytics": "^1.0.1"
 	}
 }
