--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"kd-tree-javascript": "^1.0.3",
+		"ml-distance": "^4.0.1"
 	}
 }
