--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/density-clustering": "^1.3.1",
+		"@types/kd-tree-javascript": "^1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -46,6 +48,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
+		"density-clustering": "^1.3.0",
 		"kd-tree-javascript": "^1.0.3",
 		"ml-distance": "^4.0.1"
 	}
