--- a/package.json
+++ b/package.json
@@ -47,9 +47,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1",
-		"density-clustering": "^1.3.0",
-		"kd-tree-javascript": "^1.0.3",
-		"ml-distance": "^4.0.1"
+		"@vercel/analytics": "^1.0.1"
 	}
 }
