--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
 		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
-		"@types/density-clustering": "^1.3.1",
-		"@types/kd-tree-javascript": "^1.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -47,6 +45,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tensorflow/tfjs": "^4.9.0",
 		"@vercel/analytics": "^1.0.1"
 	}
 }
