--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"umap-js": "^1.3.3"
 	}
 }
