--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sourcechart",
-	"version": "0.0.1",
+	"version": "0.2.0",
 	"license": "internal",
 	"private": true,
 	"scripts": {
@@ -39,14 +39,13 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
-		"kd-tree-javascript": "^1.0.3",
-		"ml-distance": "^4.0.1"
+		"umap-js": "^1.3.3"
 	}
 }
