--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@duckdb/duckdb-wasm": "^1.24.0",
 		"@playwright/test": "^1.28.1",
 		"@popperjs/core": "^2.11.6",
+		"sqlite-wasm-esm": "^0.0.30",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
