--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"@duckdb/duckdb-wasm": "^1.24.0",
 		"@playwright/test": "^1.28.1",
 		"@popperjs/core": "^2.11.6",
-		"sqlite-wasm-esm": "^0.0.30",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -46,7 +45,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sqlite.org/sqlite-wasm": "^3.42.0-build6",
 		"@vercel/analytics": "^1.0.1",
+		"sqlite-wasm-esm": "^0.0.30",
 		"umap-js": "^1.3.3"
 	}
 }
