--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
+		"sqlite-wasm-esm": "^0.0.30",
 		"umap-js": "^1.3.3"
 	}
 }
