--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
 			"headers": [
 				{
 					"key": "Cross-Origin-Embedder-Policy",
-					"value": "require-corp"
+					"value": "same-origin"
 				},
 				{
 					"key": "Cross-Origin-Opener-Policy",
