--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
+		"vite-plugin-cross-origin-isolation": "^0.1.6",
+		"vite-plugin-mkcert": "^1.16.0",
 		"vitest": "^0.25.3"
 	},
 	"type": "module",
