--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sqlite.org/sqlite-wasm": "^3.42.0-build7",
 		"@vercel/analytics": "^1.0.1",
 		"sqlite-wasm-esm": "^0.0.30",
 		"umap-js": "^1.3.3"
