--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
 				{ "key": "Access-Control-Allow-Origin", "value": "*" },
 				{ "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
 				{ "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-				{ "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+				{ "key": "Cross-Origin-Embedder-Policy", "value": "same-origin" },
 				{ "key": "Cross-Origin-Resource-Policy", "value": "cross-origin" },
 				{
 					"key": "Access-Control-Allow-Headers",
