--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,9 @@
 		{
 			"source": "/(.*)",
 			"headers": [
-				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
-				{ "key": "Access-Control-Allow-Origin", "value": "*" },
-				{ "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+				{ "Cross-Origin-Embedder-Policy": "require-corp" },
 				{
-					"key": "Access-Control-Allow-Headers",
-					"value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+					"Cross-Origin-Opener-Policy": "same-origin"
 				}
 			]
 		}
