--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
 	"headers": [
 		{
-			"source": "/(.*)",
+			"source": "/api/(.*)",
 			"headers": [
-				{ "Cross-Origin-Embedder-Policy": "require-corp" },
-				{
-					"Cross-Origin-Opener-Policy": "same-origin"
-				}
+				{ "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+				{ "key": "Cross-Origin-Opener-Policy", "value": "same-origin" }
 			]
 		}
 	]
