--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/auth-helpers-sveltekit": "^0.10.2",
-		"@supabase/auth-ui-shared": "^0.1.6",
-		"@supabase/auth-ui-svelte": "^0.2.2",
-		"@supabase/supabase-js": "^2.32.0",
+		//"@supabase/auth-helpers-sveltekit": "^0.10.2",
+		//"@supabase/auth-ui-shared": "^0.1.6",
+		//"@supabase/auth-ui-svelte": "^0.2.2",
+		//"@supabase/supabase-js": "^2.32.0",
 		"@vercel/analytics": "^1.0.1",
-		"sqlite-wasm-esm": "^0.0.30",
-		"umap-js": "^1.3.3"
+		"sqlite-wasm-esm": "^0.0.30"
+		//"umap-js": "^1.3.3"
 	}
 }
