--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sourcechart",
-	"version": "0.3.0",
+	"version": "0.2.0",
 	"license": "internal",
 	"private": true,
 	"scripts": {
@@ -45,6 +45,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.10.2",
+		"@supabase/auth-ui-shared": "^0.1.6",
+		"@supabase/auth-ui-svelte": "^0.2.2",
+		"@supabase/supabase-js": "^2.32.0",
 		"@vercel/analytics": "^1.0.1",
 		"sqlite-wasm-esm": "^0.0.30"
 	}
