--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sourcechart",
-	"version": "0.0.1",
+	"version": "0.2.0",
 	"license": "internal",
 	"private": true,
 	"scripts": {
@@ -36,15 +36,20 @@
 		"scenejs": "1.1.7",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^4.10.7",
+		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@supabase/auth-helpers-sveltekit": "^0.10.2",
+		"@supabase/auth-ui-shared": "^0.1.6",
+		"@supabase/auth-ui-svelte": "^0.2.2",
+		"@supabase/supabase-js": "^2.32.0",
+		"@vercel/analytics": "^1.0.1",
+		"sqlite-wasm-esm": "^0.0.30"
 	}
 }
