--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"scenejs": "1.1.7",
 		"svelte": "^3.54.0",
+		"svelte-adapter-bun": "^0.5.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.2.7",
@@ -50,6 +51,8 @@
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@vercel/analytics": "^1.0.1",
-		"sqlite-wasm-esm": "^0.0.30"
+		"flowbite-svelte-icons": "^0.4.3",
+		"sqlite-wasm-esm": "^0.0.30",
+		"tailwind-merge": "^1.14.0"
 	}
 }
