--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
-		"vitest": "^0.25.3",
-		"roughjs": "^3.0.5"
+		"vitest": "^0.25.3"
 	},
 	"type": "module",
 	"dependencies": {
