Removing flowbite-svelte icons

--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
 		"@supabase/supabase-js": "^2.32.0",
 		"@vercel/analytics": "^1.0.1",
 		"dayjs": "^1.11.9",
-		"flowbite-svelte-icons": "^0.4.3",
-		"sqlite-wasm-esm": "^0.0.30",
-		"tailwind-merge": "^1.14.0"
+		"sqlite-wasm-esm": "^0.0.30"
 	}
 }
