--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-	"name": "sourcechart",
-	"version": "0.3.5",
-	"license": "internal",
-	"private": true,
-	"scripts": {
-		"prepare": "svelte-kit sync",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "playwright test",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@duckdb/duckdb-wasm": "^1.24.0",
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"scenejs": "1.1.7",
-		"svelte": "^3.54.0",
-		"svelte-adapter-bun": "^0.5.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.4",
-		"tailwindcss": "^3.2.7",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.5",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@supabase/auth-helpers-sveltekit": "^0.10.2",
-		"@deck.gl/core": "^8.9.22",
-		"@deck.gl/layers": "^8.9.22",
-		"@vercel/analytics": "^1.0.1",
-		"dayjs": "^1.11.9",
-		"idb-keyval": "^6.2.1"
-	}
+  "name": "sourcechart",
+  "version": "0.3.5",
+  "license": "internal",
+  "private": true,
+  "scripts": {
+    "prepare": "svelte-kit sync",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:unit": "vitest",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@duckdb/duckdb-wasm": "^1.24.0",
+    "@playwright/test": "^1.28.1",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "scenejs": "1.1.7",
+    "svelte": "^3.54.0",
+    "svelte-adapter-bun": "^0.5.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.4",
+    "tailwindcss": "^3.2.7",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.5",
+    "vite": "^4.0.0",
+    "vitest": "^0.25.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "@deck.gl/core": "^8.9.22",
+    "@deck.gl/extensions": "^8.9.31",
+    "@deck.gl/layers": "^8.9.22",
+    "@supabase/auth-helpers-sveltekit": "^0.10.2",
+    "@vercel/analytics": "^1.0.1",
+    "dayjs": "^1.11.9",
+    "idb-keyval": "^6.2.1"
+  }
 }
