--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@deck.gl/extensions": "^8.9.31",
     "@deck.gl/geo-layers": "^8.9.32",
     "@deck.gl/layers": "^8.9.22",
+    "@deck.gl/mapbox": "^8.9.32",
     "@supabase/auth-helpers-sveltekit": "^0.10.2",
     "@vercel/analytics": "^1.0.1",
     "dayjs": "^1.11.9",
-    "idb-keyval": "^6.2.1"
+    "idb-keyval": "^6.2.1",
+    "mapbox-gl": "^2.15.0"
   }
 }
