--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@deck.gl/layers": "^8.9.22",
     "@deck.gl/mapbox": "^8.9.32",
     "@supabase/auth-helpers-sveltekit": "^0.10.2",
+    "@types/d3": "^7.4.2",
     "@vercel/analytics": "^1.0.1",
+    "d3": "^7.8.5",
     "dayjs": "^1.11.9",
     "idb-keyval": "^6.2.1",
     "mapbox-gl": "^2.15.0"
